--- a/SignUp2.html
+++ b/SignUp2.html
@@ -24,6 +24,15 @@
             <div class="col-lg-8 col-md-10 col-sm-8 col-xs-8  my-auto mx-auto" >
                <div class="row">
                   <div class="col-12">
+                     <br>
+                     <div class="form-error">
+                        Please enter a message in the textarea.
+                      </div>
+                      <div class="form-error">
+                        Password does not match.
+                      </div>
+                  </div>
+                  <div class="col-12">
                      <div class="row">
                         <div class="col-12" style="margin-top: 10px;margin-bottom: -20px;">
                            <p class="signup-heading">Addrress</p>
