--- a/SignUp2.html
+++ b/SignUp2.html
@@ -1104,7 +1104,7 @@
                               <input type="file" id="pic" name="pic" accept="image/*" onchange='checkInfo(event)'>
                               </div>
                               </div>
-                              <div class="col-6" style="margin-bottom: 10px;">
+                              <div class="col-6 my-auto" >
                                 
                                  <div class="preview">
                                     
@@ -1128,6 +1128,7 @@
                      </div>
                      <div class="row">
                         <div class="col-12"">
+                           <br>
                            <button type="submit" class="login-btn btn btn-info btn-block" onclick="login()">Sign Up</button>
                         </div>
                      </div>
