--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -350,7 +350,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="driver.html" class="nav-link">
               <i class="nav-icon fas fa-motorcycle"></i>
               <p>
                 Drivers
