--- a/patner-portal/order-history.html
+++ b/patner-portal/order-history.html
@@ -343,14 +343,14 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-motorcycle"></i>
-                      <p>
-                        Drivers
-                       
-                      </p>
-                    </a>
-                  </li>
+                     <a href="driver.html" class="nav-link">
+                       <i class="nav-icon fas fa-motorcycle"></i>
+                       <p>
+                         Drivers
+                        
+                       </p>
+                     </a>
+                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link">
                       <i class="nav-icon fas fa-chart-pie"></i>
