--- a/patner-portal/reviews.html
+++ b/patner-portal/reviews.html
@@ -347,14 +347,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-motorcycle"></i>
-            <p>
-              Drivers
-             
-            </p>
-          </a>
-        </li>
+          <li class="nav-item">
+            <a href="driver.html" class="nav-link">
+              <i class="nav-icon fas fa-motorcycle"></i>
+              <p>
+                Drivers
+               
+              </p>
+            </a>
+          </li>
         <li class="nav-item">
           <a href="#" class="nav-link">
             <i class="nav-icon fas fa-chart-pie"></i>
