--- a/patner-portal/promotions.html
+++ b/patner-portal/promotions.html
@@ -310,13 +310,13 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-cog"></i>
-                      <p>
+                     <a href="settings.html" class="nav-link">
+                     <i class="nav-icon fas fa-cog"></i>
+                     <p>
                         Settings
-                       
-                      </p>
-                    </a>
+                        
+                     </p>
+                     </a>
                   </li>
                   <li class="nav-item">
                      <a href="reviews.html" class="nav-link">
