--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -313,7 +313,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="settings.html" class="nav-link">
               <i class="nav-icon fas fa-cog"></i>
               <p>
                 Settings
