--- a/patner-portal/order-history.html
+++ b/patner-portal/order-history.html
@@ -306,14 +306,14 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-cog"></i>
-                      <p>
-                        Settings
-                       
-                      </p>
-                    </a>
-                  </li>
+            <a href="settings.html" class="nav-link">
+              <i class="nav-icon fas fa-cog"></i>
+              <p>
+                Settings
+               
+              </p>
+            </a>
+          </li>
                   <li class="nav-item">
                      <a href="reviews.html" class="nav-link">
                        <i class="nav-icon fas fa-comment"></i>
