--- a/patner-portal/reservation-history.html
+++ b/patner-portal/reservation-history.html
@@ -310,14 +310,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-cog"></i>
-            <p>
-              Settings
-             
-            </p>
-          </a>
-        </li>
+            <a href="settings.html" class="nav-link">
+              <i class="nav-icon fas fa-cog"></i>
+              <p>
+                Settings
+               
+              </p>
+            </a>
+          </li>
         <li class="nav-item">
             <a href="reviews.html" class="nav-link">
               <i class="nav-icon fas fa-comment"></i>
