--- a/patner-portal/promotions.html
+++ b/patner-portal/promotions.html
@@ -338,13 +338,12 @@
                     
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-plus"></i>
-                      <p>
-                        Add-ons
-                       
-                      </p>
-                    </a>
+                     <a href="addons.html" class="nav-link">
+                        <i class="nav-icon fas fa-plus"></i>
+                        <p>
+                           Add-ons
+                        </p>
+                     </a>
                   </li>
                   <li class="nav-item">
                      <a href="driver.html" class="nav-link">
