--- a/patner-portal/settings.html
+++ b/patner-portal/settings.html
@@ -267,7 +267,7 @@
                         </a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="addons.html" class="nav-link">
                            <i class="nav-icon fas fa-plus"></i>
                            <p>
                               Add-ons
