--- a/patner-portal/driver.html
+++ b/patner-portal/driver.html
@@ -336,14 +336,13 @@
             
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-plus"></i>
-              <p>
-                Add-ons
-               
-              </p>
+            <a href="addons.html" class="nav-link">
+               <i class="nav-icon fas fa-plus"></i>
+               <p>
+                  Add-ons
+               </p>
             </a>
-          </li>
+         </li>
           <li class="nav-item">
             <a href="driver.html" class="nav-link">
               <i class="nav-icon fas fa-motorcycle"></i>
