--- a/patner-portal/reservation-history.html
+++ b/patner-portal/reservation-history.html
@@ -337,15 +337,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
             
           </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-plus"></i>
-            <p>
-              Add-ons
-             
-            </p>
-          </a>
-        </li>
+          <li class="nav-item">
+            <a href="addons.html" class="nav-link">
+               <i class="nav-icon fas fa-plus"></i>
+               <p>
+                  Add-ons
+               </p>
+            </a>
+         </li>
         <li class="nav-item">
           <a href="driver.html" class="nav-link">
             <i class="nav-icon fas fa-motorcycle"></i>
