--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -358,14 +358,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-chart-pie"></i>
-              <p>
-                Analytics
-               
-              </p>
+            <a href="anylatics.html" class="nav-link">
+               <i class="nav-icon fas fa-chart-pie"></i>
+               <p>
+                  Analytics
+               </p>
             </a>
-          </li>
+         </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
