--- a/patner-portal/order-history.html
+++ b/patner-portal/order-history.html
@@ -350,14 +350,13 @@
                        </p>
                      </a>
                    </li>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-chart-pie"></i>
-                      <p>
-                        Analytics
-                       
-                      </p>
-                    </a>
+                   <li class="nav-item">
+                     <a href="anylatics.html" class="nav-link">
+                        <i class="nav-icon fas fa-chart-pie"></i>
+                        <p>
+                           Analytics
+                        </p>
+                     </a>
                   </li>
                 </ul>
               </nav>
