--- a/patner-portal/reservation-reviews.html
+++ b/patner-portal/reservation-reviews.html
@@ -355,14 +355,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-chart-pie"></i>
-            <p>
-              Analytics
-             
-            </p>
+          <a href="anylatics.html" class="nav-link">
+             <i class="nav-icon fas fa-chart-pie"></i>
+             <p>
+                Analytics
+             </p>
           </a>
-        </li>
+       </li>
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
