--- a/patner-portal/reviews.html
+++ b/patner-portal/reviews.html
@@ -355,15 +355,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </p>
             </a>
           </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-chart-pie"></i>
-            <p>
-              Analytics
-             
-            </p>
-          </a>
-        </li>
+          <li class="nav-item">
+            <a href="anylatics.html" class="nav-link">
+               <i class="nav-icon fas fa-chart-pie"></i>
+               <p>
+                  Analytics
+               </p>
+            </a>
+         </li>
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
