--- a/patner-portal/settings.html
+++ b/patner-portal/settings.html
@@ -283,7 +283,7 @@
                         </a>
                      </li>
                      <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="anylatics.html" class="nav-link">
                            <i class="nav-icon fas fa-chart-pie"></i>
                            <p>
                               Analytics
