--- a/patner-portal/anylatics.html
+++ b/patner-portal/anylatics.html
@@ -303,7 +303,7 @@
                <div class="container-fluid">
                   <div class="row mb-2">
                      <div class="col-sm-6">
-                        <h1 class="m-0">Anylatics</h1>
+                        <h1 class="m-0">Analytics</h1>
                      </div>
                      <!-- /.col -->
                      <div class="col-sm-6">
@@ -327,7 +327,7 @@
                       
                         <div class="card" id="requests">
                            <div class="card-header">
-                              <h3 class="card-title">Order Anylatics</h3>
+                              <h3 class="card-title">Order Analytics</h3>
                            </div>
                            <!-- /.card-header -->
                            <div class="card-body">
@@ -375,7 +375,7 @@
                         </div>
                         <div class="card" id="requests">
                             <div class="card-header">
-                               <h3 class="card-title">Delivery Anylatics</h3>
+                               <h3 class="card-title">Delivery Analytics</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
@@ -422,7 +422,7 @@
                          </div>
                          <div class="card" id="requests">
                             <div class="card-header">
-                               <h3 class="card-title">Customer Anylatics</h3>
+                               <h3 class="card-title">Customer Analytics</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
@@ -466,7 +466,7 @@
                          </div>
                          <div class="card" id="requests">
                             <div class="card-header">
-                               <h3 class="card-title">Order Anylatics</h3>
+                               <h3 class="card-title">Order Analytics</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
@@ -510,7 +510,7 @@
                          </div>
                          <div class="card" id="requests">
                             <div class="card-header">
-                               <h3 class="card-title">Rating Anylatics</h3>
+                               <h3 class="card-title">Rating Analytics</h3>
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
