--- a/patner-portal/driver.html
+++ b/patner-portal/driver.html
@@ -353,7 +353,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="anylatics.html" class="nav-link">
+            <a href="analytics.html" class="nav-link">
                <i class="nav-icon fas fa-chart-pie"></i>
                <p>
                   Analytics
