--- a/patner-portal/reviews.html
+++ b/patner-portal/reviews.html
@@ -356,7 +356,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </a>
           </li>
           <li class="nav-item">
-            <a href="anylatics.html" class="nav-link">
+            <a href="analytics.html" class="nav-link">
                <i class="nav-icon fas fa-chart-pie"></i>
                <p>
                   Analytics
