--- a/patner-portal/addons.html
+++ b/patner-portal/addons.html
@@ -362,8 +362,12 @@
                                                             <label class="switch switch-left-right">
                                                                 <input class="switch-input" type="checkbox">
                                                                 <span class="switch-label" data-on="On" data-off="Off"></span> <span class="switch-handle"></span> </label>
-                                                                <a class="card-link" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">  <i class="fa fa-angle-down"></i></a>
-                                                         </div>
+                                                                <button class="btn btn-default btn-md" data-toggle="modal" data-target="#edit_category">
+                                                                    Options
+                                                                </button>
+                                                                &nbsp;<a class="card-link" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">  <i class="fa fa-angle-down"></i></a>
+                                                        
+                                                            </div>
 
                                                     </div>
                                                 </div>
@@ -452,6 +456,10 @@
                                                         <label class="switch switch-left-right">
                                                             <input class="switch-input" type="checkbox">
                                                             <span class="switch-label" data-on="On" data-off="Off"></span> <span class="switch-handle"></span> </label>
+                                                            <button class="btn btn-default btn-md" data-toggle="modal" data-target="#edit_category">
+                                                                Options
+                                                            </button>
+                                                            &nbsp;
                                                             <a class="card-link" data-toggle="collapse" href="#collapsetwo" aria-expanded="true" aria-controls="collapsetwo">  <i class="fa fa-angle-down"></i></a>
                                                      </div>
 
@@ -767,6 +775,44 @@
               </div>
               <div class="m-footer">
                  <button type="button" onclick="submitAddOn()" class="btn btn-default btn-block" data-dismiss="modal">Add</button>
+              </div>
+           </div>
+        </div>
+     </div>
+     <div class="modal fade" id="edit_category" tabindex="-1" role="dialog" aria-labelledby="active" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+           <div class="modal-content">
+              <div class="modal-header">
+                 <h5 class="modal-title" id="orderdetailLongTitle">Edit Category</h5>
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+                 </button>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      <div class="row">
+                          <div class="col-12">
+                              <div class="form-group">
+                                <label>Category Name (English):</label>
+                                <input type="text" class="form-control" />
+
+                              </div>
+
+                          </div>
+                          <div class="col-12">
+                            <div class="form-group">
+                              <label>Category Name (Arabic):</label>
+                              <input type="text" class="form-control" />
+
+                            </div>
+
+                        </div>
+                      </div>
+                  </form>
+               
+              </div>
+              <div class="m-footer">
+                 <button type="button" onclick="submitAddOn()" class="btn btn-default btn-block" data-dismiss="modal">Edit</button>
               </div>
            </div>
         </div>
