--- a/patner-portal/addons.html
+++ b/patner-portal/addons.html
@@ -332,28 +332,25 @@
                            <div class="card-body">
                               <div class="row">
                                  <div class="col-12">
-                                    <button class="btn btn-default btn-block" data-toggle="modal" data-target="#categories">Add Categories</button>
+                                    <button class="btn btn-info btn-block" data-toggle="modal" data-target="#categories">Add Categories</button>
                                  </div>
                               </div>
                            </div>
                         </div>
                         <div class="card" id="requests">
-                            <div class="card-header">
-                               <h3 class="card-title">Search</h3>
-                            </div>
-                            <!-- /.card-header -->
-                            <div class="card-body">
-                               <div class="row">
-                                   <div class="col-12">
-                                       <inpu type="text" class="form-control" style="margin-bottom:10px;" />
-                                   </div>
-                                  <div class="col-12">
-                                     
-                                     <button class="btn btn-default btn-block" data-toggle="modal" data-target="#categories">Search</button>
-                                  </div>
-                               </div>
-                            </div>
-                         </div>
+                           <div class="card-header">
+                              <h3 class="card-title">Add New Addons</h3>
+                           </div>
+                           <!-- /.card-header -->
+                           <div class="card-body">
+                              <div class="row">
+                                 <div class="col-12">
+                                    <button class="btn btn-default btn-block" data-toggle="modal" data-target="#add">Add  Addons</button>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        
                         <div class="card" id="requests">
                            <div class="card-header">
                               <h3 class="card-title">AddOns</h3>
@@ -899,15 +896,7 @@
          <strong>Copyright &copy; 2021 <a href="https://humaizshahid.com">Volo</a>.</strong> All rights reserved.
       </footer>
       </div>
-      <a  href="#" data-toggle="modal" data-target="#add">
-         <div class="row" style="padding: 0px;margin: 0px;">
-            <div class="col-12 t-fixed " style="padding: 0px;margin: 0px;"> 
-            </div>
-         </div>
-         <div class="trading mx-auto" >
-            <img src="../img/footer-logo.png"/>
-         </div>
-      </a>
+
       <!-- jQuery -->
       <script src="plugins/jquery/jquery.min.js"></script>
       <!-- Bootstrap 4 -->
