--- a/patner-portal/analytics.html
+++ b/patner-portal/analytics.html
@@ -756,6 +756,8 @@
       <script src="dist/js/adminlte.min.js"></script>
       <!-- AdminLTE for demo purposes -->
       <script src="dist/js/demo.js"></script>
+      <script src="dist/js/pages/dashboard3.js"></script>
+
       <script src="dist/js/addOn2.js"></script>
       <script src="../js/patnerSettings.js"></script>
    
