--- a/patner-portal/analytics.html
+++ b/patner-portal/analytics.html
@@ -234,8 +234,8 @@
                            </li>
                         </ul>
                      </li>
-                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                    analytics <li class="nav-item">
+                        <a href="cah.html" class="nav-link">
                            <i class="nav-icon fas fa-home"></i>
                            <p>
                               Do it Yourself
