--- a/patner-portal/driver.html
+++ b/patner-portal/driver.html
@@ -299,7 +299,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="cah.html" class="nav-link">
               <i class="nav-icon fas fa-home"></i>
               <p>
                 Do it Yourself
