--- a/patner-portal/main.html
+++ b/patner-portal/main.html
@@ -304,14 +304,13 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-home"></i>
-              <p>
-                Do it Yourself
-               
-              </p>
+            <a href="cah.html" class="nav-link">
+               <i class="nav-icon fas fa-home"></i>
+               <p>
+                  Do it Yourself
+               </p>
             </a>
-          </li>
+         </li>
           <li class="nav-item">
             <a href="settings.html" class="nav-link">
               <i class="nav-icon fas fa-cog"></i>
