--- a/patner-portal/promotions.html
+++ b/patner-portal/promotions.html
@@ -301,13 +301,12 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      <i class="nav-icon fas fa-home"></i>
-                      <p>
-                        Do it Yourself
-                       
-                      </p>
-                    </a>
+                     <a href="cah.html" class="nav-link">
+                        <i class="nav-icon fas fa-home"></i>
+                        <p>
+                           Do it Yourself
+                        </p>
+                     </a>
                   </li>
                   <li class="nav-item">
                      <a href="settings.html" class="nav-link">
