--- a/patner-portal/reviews.html
+++ b/patner-portal/reviews.html
@@ -301,14 +301,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </ul>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-home"></i>
-            <p>
-              Do it Yourself
-             
-            </p>
+          <a href="cah.html" class="nav-link">
+             <i class="nav-icon fas fa-home"></i>
+             <p>
+                Do it Yourself
+             </p>
           </a>
-        </li>
+       </li>
         <li class="nav-item">
             <a href="settings.html" class="nav-link">
               <i class="nav-icon fas fa-cog"></i>
