--- a/patner-portal/addons.html
+++ b/patner-portal/addons.html
@@ -235,6 +235,14 @@
                         </ul>
                      </li>
                      <li class="nav-item">
+                        <a href="menu.html" class="nav-link">
+                           <i class="nav-icon fas fa-shopping-cart"></i>
+                           <p>
+                              Menu
+                           </p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
                         <a href="cah.html" class="nav-link">
                            <i class="nav-icon fas fa-home"></i>
                            <p>
