--- a/patner-portal/analytics.html
+++ b/patner-portal/analytics.html
@@ -234,7 +234,15 @@
                            </li>
                         </ul>
                      </li>
-                    analytics <li class="nav-item">
+                     <li class="nav-item">
+                        <a href="menu.html" class="nav-link">
+                           <i class="nav-icon fas fa-shopping-cart"></i>
+                           <p>
+                              Menu
+                           </p>
+                        </a>
+                     </li>
+                     <li class="nav-item">
                         <a href="cah.html" class="nav-link">
                            <i class="nav-icon fas fa-home"></i>
                            <p>
