--- a/patner-portal/driver.html
+++ b/patner-portal/driver.html
@@ -299,6 +299,14 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a href="menu.html" class="nav-link">
+               <i class="nav-icon fas fa-shopping-cart"></i>
+               <p>
+                  Menu
+               </p>
+            </a>
+         </li>
+          <li class="nav-item">
             <a href="cah.html" class="nav-link">
               <i class="nav-icon fas fa-home"></i>
               <p>
