--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -301,6 +301,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </ul>
         </li>
         <li class="nav-item">
+          <a href="menu.html" class="nav-link">
+             <i class="nav-icon fas fa-shopping-cart"></i>
+             <p>
+                Menu
+             </p>
+          </a>
+       </li>
+        <li class="nav-item">
           <a href="cah.html" class="nav-link">
              <i class="nav-icon fas fa-home"></i>
              <p>
