--- a/patner-portal/cah.html
+++ b/patner-portal/cah.html
@@ -1193,7 +1193,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
          <div class="modal-content">
             <div class="modal-header">
-               <h5 class="modal-title" id="orderdetailLongTitle">Move Menu</h5>
+               <h5 class="modal-title" id="orderdetailLongTitle">Move Items</h5>
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                <span aria-hidden="true">&times;</span>
                </button>
@@ -1214,7 +1214,7 @@
 
                         </div>
                         <div class="col-12">
-                         <button class="btn btn-default btn-block">Move Menu</button>
+                         <button class="btn btn-default btn-block">Move Items</button>
                       </div>
                     </div>
                 </form>
