--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -327,7 +327,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </li>
         <li class="nav-item">
           <a href="reviews.html" class="nav-link">
-            <i class="nav-icon fas fa-comment"></i>
+            <i class="nav-icon fas fa-star"></i>
             <p>
               Reviews
              
