--- a/patner-portal/driver.html
+++ b/patner-portal/driver.html
@@ -326,7 +326,7 @@
           </li>
           <li class="nav-item">
             <a href="reviews.html" class="nav-link">
-              <i class="nav-icon fas fa-comment"></i>
+              <i class="nav-icon fas fa-star"></i>
               <p>
                 Reviews
                
