--- a/patner-portal/settings.html
+++ b/patner-portal/settings.html
@@ -262,7 +262,7 @@
                      </li>
                      <li class="nav-item">
                         <a href="reviews.html" class="nav-link">
-                           <i class="nav-icon fas fa-comment"></i>
+                           <i class="nav-icon fas fa-star"></i>
                            <p>
                               Reviews
                            </p>
