--- a/patner-portal/cah.html
+++ b/patner-portal/cah.html
@@ -1415,7 +1415,7 @@
       <script src="dist/js/addOn2.js"></script>
       <script src="dist/js/cah.js"></script>
 
-      <script src="../js/patnerSettings.js"></script>
+      <script src="dist/js/patnerSettings.js"></script>
              
 
       <script>
