--- a/patner-portal/addons.html
+++ b/patner-portal/addons.html
@@ -966,7 +966,7 @@
       <!-- AdminLTE for demo purposes -->
       <script src="dist/js/demo.js"></script>
       <script src="dist/js/addOn2.js"></script>
-      <script src="../js/patnerSettings.js"></script>
+      <script src="dist/js/patnerSettings.js"></script>
       <script>
         $('.card-header').click(function() {
           $(this).find('i').toggleClass('fas fa-angle-down fas fa-angle-up');
