--- a/patner-portal/analytics.html
+++ b/patner-portal/analytics.html
@@ -811,7 +811,7 @@
       <script src="dist/js/pages/dashboard3.js"></script>
 
       <script src="dist/js/addOn2.js"></script>
-      <script src="../js/patnerSettings.js"></script>
+      <script src="dist/js/patnerSettings.js"></script>
    
     <script>
         var ctx = document.getElementById("myChart").getContext('2d');
