--- a/patner-portal/settings.html
+++ b/patner-portal/settings.html
@@ -3694,7 +3694,7 @@
       <!-- AdminLTE for demo purposes -->
       <script src="dist/js/demo.js"></script>
 
-      <script src="../js/patnerSettings.js"></script>
+      <script src="dist/js/patnerSettings.js"></script>
       <script>
          $(document).ready(function(){
 
