--- a/patner-portal/menu.html
+++ b/patner-portal/menu.html
@@ -1416,7 +1416,7 @@
       <script src="dist/js/addOn2.js"></script>
       <script src="dist/js/cah.js"></script>
 
-      <script src="../js/patnerSettings.js"></script>
+      <script src="dist/js/patnerSettings.js"></script>
              
 
       <script>
