--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -1119,7 +1119,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script src="plugins/datatables-buttons/js/buttons.html5.min.js"></script>
 <script src="plugins/datatables-buttons/js/buttons.print.min.js"></script>
 <script src="plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-<script src="partnerReserve.js" type="text/javascript"></script>
+<script src="dist/js/partnerReserve.js" type="text/javascript"></script>
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
