--- a/patner-portal/reservations.html
+++ b/patner-portal/reservations.html
@@ -534,7 +534,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <div class="card-body">
                 <div class="row">
                   <div class="col-12" >
-                    <table id="reservations_request" class="table table-bordered table-responsive" >
+                    <table id="today_reservation" class="table table-bordered table-responsive" >
                       <thead>
                       <tr>
                         <th>Reservation ID</th>
